# recruiters

./: README.md  pyproject.toml  requirements.txt
backend/: .env  db.sqlite3  requirements.txt
backend/app/: auth.py  config.py  database.py  mailing.py  main.py  models.py  schemas.py
backend/backend/: settings.py  urls.py
backend/login/: views.py
backend/static/: styles.css  styles2.css
backend/static/scripts/: script.js
backend/templates/: base.html  dashboardcompany.html  dashboarduser.html  index.html  login.html  logincompany.html  loginuser.html  mainpage.html  signup.html  signupcompany.html  signupuser.html
frontend/src/: App.jsx
frontend/src/components/: Layout.jsx  Login.jsx  Navbar.jsx
